exports[`directionalProperty properly applies a value when passed only one 1`] = `
Object {
  "border-bottom": "12px",
  "border-left": "12px",
  "border-right": "12px",
  "border-top": "12px",
}
`;

exports[`directionalProperty properly applies values when passed four 1`] = `
Object {
  "border-bottom": "36px",
  "border-left": "48px",
  "border-right": "24px",
  "border-top": "12px",
}
`;

exports[`directionalProperty properly applies values when passed three 1`] = `
Object {
  "border-bottom": "36px",
  "border-left": "24px",
  "border-right": "24px",
  "border-top": "12px",
}
`;

exports[`directionalProperty properly applies values when passed two 1`] = `
Object {
  "border-bottom": "12px",
  "border-left": "24px",
  "border-right": "24px",
  "border-top": "12px",
}
`;

exports[`directionalProperty properly generates properties when passed a hyphenated property 1`] = `
Object {
  "border-bottom-width": "12px",
  "border-left-width": "12px",
  "border-right-width": "12px",
  "border-top-width": "12px",
}
`;

exports[`directionalProperty properly passes just the position when not given a property 1`] = `
Object {
  "bottom": "12px",
  "left": "12px",
  "right": "12px",
  "top": "12px",
}
`;

exports[`directionalProperty properly skips bottom property when last value is null 1`] = `
Object {
  "border-left": "24px",
  "border-right": "24px",
  "border-top": "12px",
}
`;

exports[`directionalProperty properly skips bottom property when third value is null 1`] = `
Object {
  "border-left": "48px",
  "border-right": "24px",
  "border-top": "12px",
}
`;

exports[`directionalProperty properly skips left and right properties when second value is null 1`] = `
Object {
  "border-bottom": "12px",
  "border-top": "12px",
}
`;

exports[`directionalProperty properly skips left property when fourth value is null 1`] = `
Object {
  "border-bottom": "36px",
  "border-right": "24px",
  "border-top": "12px",
}
`;

exports[`directionalProperty properly skips right and left properties when second value is null 1`] = `
Object {
  "border-bottom": "36px",
  "border-top": "12px",
}
`;

exports[`directionalProperty properly skips right property when second value is null 1`] = `
Object {
  "border-bottom": "36px",
  "border-left": "48px",
  "border-top": "12px",
}
`;

exports[`directionalProperty properly skips top and bottom properties when first value is null 1`] = `
Object {
  "border-left": "12px",
  "border-right": "12px",
}
`;

exports[`directionalProperty properly skips top property when first value is null 1`] = `
Object {
  "border-bottom": "36px",
  "border-left": "24px",
  "border-right": "24px",
}
`;

exports[`directionalProperty properly skips top property when first value is null 2`] = `
Object {
  "border-bottom": "36px",
  "border-left": "48px",
  "border-right": "24px",
}
`;
